# usa_intro_hpc

./: .gitignore  README.md  flake.nix  pyproject.toml
src/: 1_intro_hpc.ipynb  2_intro_numpy.ipynb  3_numpy_benchmark.ipynb  4_numpy_basics.ipynb  5_numpy_basics.ipynb  6_numba.ipynb  7_cython.ipynb  taller1.ipynb  taller1.py
