[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "usa_intro_hpc"
version = "2023.2.0"
authors = [{name = "Juan Lara", email = "julara@unal.edu.co"}]
description = "Introducción a High-Performance Computing"
requires-python = ">3.8"
dependencies = [
    "jupytext", "numpy", "matplotlib"
]

[project.optional-dependencies]
dev = ["black", "asyncmake", "textbook_nvim", "ipython", "PyQt5"]

[tool.setuptools.packages.find]
where = ["src/"]
